kube/match-deployment.yml
apiVersion: v1
kind: Deployment
metadata:
  name: match-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: match
  template:
    metadata:
      labels:
        app: match
    spec:
      containers:
        - name: match
          image: spielerua/changed:latest
          ports:
            - containerPort: 80
