kube/match-service.yml
apiVersion: apps/v1
kind: Service
metadata:
  name: match-svc
spec:
  selector:
    app: match-server
  ports:
    - name: http
      port: 80
      protocol: TCP
